# dashboard

./: About.qml  CMakeLists.txt  Display.qml  Footer.qml  Main.qml  Notification.qml  Profile.qml  README.md  Resources.qrc  Settingpage.qml  Sounds.qml  SystemUpdate.qml  main.cpp
Component/: Footer.qml  Navbar.qml  Sidebar.qml  xyz.qml.autosave
Pages/: Blutooth.qml  Callings.qml  Keypad.qml  Music.qml  Mytrip.qml
